altered direct and sns to also log total time from invocation

--- a/benchmarks/experiments/wrapper_overhead/run.ipynb
+++ b/benchmarks/experiments/wrapper_overhead/run.ipynb
@@ -20,8 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from benchmarks.experiments.wrapper_overhead.common.run_utility import WrapperOverheadRunUtility\n",
-    "import json"
+    "from benchmarks.experiments.wrapper_overhead.common.run_utility import WrapperOverheadRunUtility"
    ]
   },
   {
@@ -65,8 +64,7 @@
    "source": [
     "payload = {\n",
     "    \"gen_file_name\": \"small_sequence.gb\"\n",
-    "}\n",
-    "payload = json.dumps(payload)"
+    "}"
    ]
   },
   {
@@ -78,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +84,7 @@
      "output_type": "stream",
      "text": [
       "Running boto3_direct workload: workflow-wo-dna_vis-ed-direct\n",
-      "Payload: {\"gen_file_name\": \"small_sequence.gb\"}\n",
+      "Payload: {'gen_file_name': 'small_sequence.gb'}\n",
       "Times: 1\n",
       "Done\n",
       "\n"
