--- a/benchmarks/experiments/wrapper_overhead/setup.ipynb
+++ b/benchmarks/experiments/wrapper_overhead/setup.ipynb
@@ -109,7 +109,7 @@
       "#4 DONE 0.0s\n",
       "\n",
       "#5 [internal] load build context\n",
-      "#5 transferring context: 106.88kB done\n",
+      "#5 transferring context: 107.74kB done\n",
       "#5 DONE 0.0s\n",
       "\n",
       "#6 [2/6] COPY requirements.txt ./\n",
@@ -118,18 +118,18 @@
       "#7 [3/6] RUN pip3 install --no-cache-dir -r requirements.txt\n",
       "#7 CACHED\n",
       "\n",
-      "#8 [5/6] COPY src ./src\n",
-      "#8 CACHED\n",
+      "#8 [4/6] COPY app.py ./\n",
+      "#8 DONE 0.0s\n",
       "\n",
-      "#9 [4/6] COPY app.py ./\n",
-      "#9 CACHED\n",
+      "#9 [5/6] COPY src ./src\n",
+      "#9 DONE 0.0s\n",
       "\n",
       "#10 [6/6] COPY multi_x_serverless ./multi_x_serverless\n",
-      "#10 CACHED\n",
+      "#10 DONE 0.0s\n",
       "\n",
       "#11 exporting to image\n",
-      "#11 exporting layers done\n",
-      "#11 writing image sha256:248d0d0249d7b98388f94752a1022935186c427fdfcf18591b90a5b4167ad3a0 done\n",
+      "#11 exporting layers 0.0s done\n",
+      "#11 writing image sha256:3b466fd86b4d99ad666d2848c4deb08b68942591e923f2300bc1552054e9c255 done\n",
       "#11 naming to docker.io/library/wo-dna_vis-ed-direct-visualize:latest done\n",
       "#11 DONE 0.0s\n",
       "Docker image wo-dna_vis-ed-direct-visualize:latest built successfully.\n",
@@ -146,9 +146,9 @@
      "text": [
       "Login Succeeded\n",
       "The push refers to repository [485595969306.dkr.ecr.us-east-2.amazonaws.com/wo-dna_vis-ed-direct-visualize]\n",
-      "63b0df0ee90a: Preparing\n",
-      "87c4e75cbde8: Preparing\n",
-      "447f03335fbc: Preparing\n",
+      "2fb7f03b7146: Preparing\n",
+      "ce4f428e205b: Preparing\n",
+      "9926562a87e9: Preparing\n",
       "8e1b406f394f: Preparing\n",
       "3a89be36bfcd: Preparing\n",
       "0a20c8da2344: Preparing\n",
@@ -160,20 +160,20 @@
       "0a20c8da2344: Waiting\n",
       "05788b7af5ed: Waiting\n",
       "706e59713fa4: Waiting\n",
-      "052242efe275: Waiting\n",
       "274a79fec6a9: Waiting\n",
+      "052242efe275: Waiting\n",
       "6849347e354b: Waiting\n",
-      "63b0df0ee90a: Layer already exists\n",
-      "3a89be36bfcd: Layer already exists\n",
       "8e1b406f394f: Layer already exists\n",
-      "447f03335fbc: Layer already exists\n",
-      "87c4e75cbde8: Layer already exists\n",
-      "05788b7af5ed: Layer already exists\n",
-      "706e59713fa4: Layer already exists\n",
+      "3a89be36bfcd: Layer already exists\n",
       "0a20c8da2344: Layer already exists\n",
+      "05788b7af5ed: Layer already exists\n",
       "052242efe275: Layer already exists\n",
+      "706e59713fa4: Layer already exists\n",
+      "6849347e354b: Layer already exists\n",
       "274a79fec6a9: Layer already exists\n",
-      "6849347e354b: Layer already exists\n"
+      "9926562a87e9: Pushed\n",
+      "ce4f428e205b: Pushed\n",
+      "2fb7f03b7146: Pushed\n"
      ]
     },
     {
@@ -187,7 +187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "latest: digest: sha256:54c873fde0899c71ab58630c6956f4090d27740fcf9f36ccf99fec3a9e80502d size: 2623\n",
+      "latest: digest: sha256:16b19fa18065060a2167e67ef4bc5ab5a7f9e8c902d1ef5c5d1ed96d7b0e5197 size: 2623\n",
       "Resulting Function ARN: arn:aws:lambda:us-east-2:485595969306:function:wo-dna_vis-ed-direct-visualize\n",
       "\n",
       "Deploying wo-dna_vis-ed-direct-get_input\n",
@@ -220,29 +220,30 @@
       "#4 DONE 0.0s\n",
       "\n",
       "#5 [internal] load build context\n",
-      "#5 transferring context: 106.47kB done\n",
+      "#5 transferring context: 106.46kB done\n",
       "#5 DONE 0.0s\n",
       "\n",
-      "#6 [4/6] COPY app.py ./\n",
+      "#6 [2/6] COPY requirements.txt ./\n",
       "#6 CACHED\n",
       "\n",
       "#7 [3/6] RUN pip3 install --no-cache-dir -r requirements.txt\n",
       "#7 CACHED\n",
       "\n",
-      "#8 [2/6] COPY requirements.txt ./\n",
-      "#8 CACHED\n",
+      "#8 [4/6] COPY app.py ./\n",
+      "#8 DONE 0.0s\n",
       "\n",
       "#9 [5/6] COPY src ./src\n",
-      "#9 CACHED\n",
+      "#9 DONE 0.0s\n",
       "\n",
       "#10 [6/6] COPY multi_x_serverless ./multi_x_serverless\n",
-      "#10 CACHED\n",
+      "#10 DONE 0.0s\n",
       "\n",
       "#11 exporting to image\n",
-      "#11 exporting layers done\n",
-      "#11 writing image sha256:e536e374c81e53dbb42482c9374810d58c523cc493d83dd4fae83da7f4ca9247 done\n",
+      "#11 exporting layers\n",
+      "#11 exporting layers 0.0s done\n",
+      "#11 writing image sha256:81cd695b11f32e0e100c6fca2066c4c465944a0bd498830beefac077f8938516 done\n",
       "#11 naming to docker.io/library/wo-dna_vis-ed-direct-get_input:latest done\n",
-      "#11 DONE 0.0s\n",
+      "#11 DONE 0.1s\n",
       "Docker image wo-dna_vis-ed-direct-get_input:latest built successfully.\n",
       "WARNING! Using --password via the CLI is insecure. Use --password-stdin.\n",
       "WARNING! Your password will be stored unencrypted in /home/daniel/.docker/config.json.\n",
@@ -257,9 +258,9 @@
      "text": [
       "Login Succeeded\n",
       "The push refers to repository [485595969306.dkr.ecr.us-east-2.amazonaws.com/wo-dna_vis-ed-direct-get_input]\n",
-      "f3074e8585c1: Preparing\n",
-      "d6b8ac757fb7: Preparing\n",
-      "553ac63b7a88: Preparing\n",
+      "83beae8cbf32: Preparing\n",
+      "51cec7ec392c: Preparing\n",
+      "9d85df8b5e8e: Preparing\n",
       "6fe8485efa46: Preparing\n",
       "34352bc5dfd0: Preparing\n",
       "0a20c8da2344: Preparing\n",
@@ -274,17 +275,17 @@
       "052242efe275: Waiting\n",
       "274a79fec6a9: Waiting\n",
       "6849347e354b: Waiting\n",
-      "f3074e8585c1: Layer already exists\n",
-      "553ac63b7a88: Layer already exists\n",
-      "d6b8ac757fb7: Layer already exists\n",
-      "6fe8485efa46: Layer already exists\n",
       "34352bc5dfd0: Layer already exists\n",
-      "0a20c8da2344: Layer already exists\n",
-      "706e59713fa4: Layer already exists\n",
+      "6fe8485efa46: Layer already exists\n",
       "05788b7af5ed: Layer already exists\n",
+      "0a20c8da2344: Layer already exists\n",
       "052242efe275: Layer already exists\n",
+      "706e59713fa4: Layer already exists\n",
       "274a79fec6a9: Layer already exists\n",
-      "6849347e354b: Layer already exists\n"
+      "6849347e354b: Layer already exists\n",
+      "9d85df8b5e8e: Pushed\n",
+      "83beae8cbf32: Pushed\n",
+      "51cec7ec392c: Pushed\n"
      ]
     },
     {
@@ -298,7 +299,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "latest: digest: sha256:0492a95eaabf02e73f961dfdd6877da90b3c947e2cdacc19a3457ca958bd5a7d size: 2623\n",
+      "latest: digest: sha256:f7c83ecf4d64cfe41a503d4d32a9ced72ad2fa2bb271c79b792cda29a6e78d46 size: 2623\n",
       "Resulting Function ARN: arn:aws:lambda:us-east-2:485595969306:function:wo-dna_vis-ed-direct-get_input\n",
       "Completed deployment of workflow-wo-dna_vis-ed-direct\n",
       "\n",
@@ -376,27 +377,27 @@
       "#4 DONE 0.0s\n",
       "\n",
       "#5 [internal] load build context\n",
-      "#5 transferring context: 106.88kB done\n",
+      "#5 transferring context: 107.82kB done\n",
       "#5 DONE 0.0s\n",
       "\n",
-      "#6 [5/6] COPY src ./src\n",
+      "#6 [2/6] COPY requirements.txt ./\n",
       "#6 CACHED\n",
       "\n",
-      "#7 [2/6] COPY requirements.txt ./\n",
+      "#7 [3/6] RUN pip3 install --no-cache-dir -r requirements.txt\n",
       "#7 CACHED\n",
       "\n",
-      "#8 [3/6] RUN pip3 install --no-cache-dir -r requirements.txt\n",
-      "#8 CACHED\n",
+      "#8 [4/6] COPY app.py ./\n",
+      "#8 DONE 0.0s\n",
       "\n",
-      "#9 [4/6] COPY app.py ./\n",
-      "#9 CACHED\n",
+      "#9 [5/6] COPY src ./src\n",
+      "#9 DONE 0.0s\n",
       "\n",
       "#10 [6/6] COPY multi_x_serverless ./multi_x_serverless\n",
-      "#10 CACHED\n",
+      "#10 DONE 0.0s\n",
       "\n",
       "#11 exporting to image\n",
-      "#11 exporting layers done\n",
-      "#11 writing image sha256:9c68420161b0597cd7523f37fdbaa4206b17e1f08fc1dca242c5ed28932d664b done\n",
+      "#11 exporting layers 0.0s done\n",
+      "#11 writing image sha256:aed78f95f8bec56c78068af33626af86af9a0c3113abd967b652221ce3966396 done\n",
       "#11 naming to docker.io/library/wo-dna_vis-ed-direct_sns-visualize:latest done\n",
       "#11 DONE 0.0s\n",
       "Docker image wo-dna_vis-ed-direct_sns-visualize:latest built successfully.\n",
@@ -413,9 +414,9 @@
      "text": [
       "Login Succeeded\n",
       "The push refers to repository [485595969306.dkr.ecr.us-east-2.amazonaws.com/wo-dna_vis-ed-direct_sns-visualize]\n",
-      "a1b24d847129: Preparing\n",
-      "abcf622c00a1: Preparing\n",
-      "8b9d2f646851: Preparing\n",
+      "582c3565a784: Preparing\n",
+      "e6c498266fbc: Preparing\n",
+      "be34b9c20d9e: Preparing\n",
       "8e1b406f394f: Preparing\n",
       "3a89be36bfcd: Preparing\n",
       "0a20c8da2344: Preparing\n",
@@ -427,20 +428,20 @@
       "0a20c8da2344: Waiting\n",
       "05788b7af5ed: Waiting\n",
       "706e59713fa4: Waiting\n",
+      "052242efe275: Waiting\n",
       "274a79fec6a9: Waiting\n",
       "6849347e354b: Waiting\n",
-      "052242efe275: Waiting\n",
-      "3a89be36bfcd: Layer already exists\n",
       "8e1b406f394f: Layer already exists\n",
-      "a1b24d847129: Layer already exists\n",
-      "abcf622c00a1: Layer already exists\n",
-      "8b9d2f646851: Layer already exists\n",
+      "3a89be36bfcd: Layer already exists\n",
       "0a20c8da2344: Layer already exists\n",
-      "706e59713fa4: Layer already exists\n",
-      "274a79fec6a9: Layer already exists\n",
       "05788b7af5ed: Layer already exists\n",
+      "706e59713fa4: Layer already exists\n",
       "052242efe275: Layer already exists\n",
-      "6849347e354b: Layer already exists\n"
+      "274a79fec6a9: Layer already exists\n",
+      "6849347e354b: Layer already exists\n",
+      "be34b9c20d9e: Pushed\n",
+      "e6c498266fbc: Pushed\n",
+      "582c3565a784: Pushed\n"
      ]
     },
     {
@@ -454,11 +455,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "latest: digest: sha256:c28806c5205a2457758be6105ec45dcd4665baf19820d8d7a19b10df15542c5c size: 2623\n",
+      "latest: digest: sha256:c0652b95a2ca57f90d9ba6cfbc9c47107fc85624de2b5f638fcb63bddaa1f26f size: 2623\n",
       "Resulting Function ARN: arn:aws:lambda:us-east-2:485595969306:function:wo-dna_vis-ed-direct_sns-visualize\n",
       "Creating sns topic and subscribing lambda function\n",
       "Resulting Topic ARN: arn:aws:sns:us-east-2:485595969306:wo-dna_vis-ed-direct_sns-visualize-sns_topic\n",
-      "Resulting Subscription ARN: arn:aws:sns:us-east-2:485595969306:wo-dna_vis-ed-direct_sns-visualize-sns_topic:ee1df0fd-8ed3-4bc6-a2b4-bc2e1897821d\n",
+      "Resulting Subscription ARN: arn:aws:sns:us-east-2:485595969306:wo-dna_vis-ed-direct_sns-visualize-sns_topic:eb97e045-f454-434f-b61d-c6eb12935873\n",
       "\n",
       "Deploying wo-dna_vis-ed-direct_sns-get_input\n",
       "Removing old resources\n",
@@ -490,7 +491,7 @@
       "#4 DONE 0.0s\n",
       "\n",
       "#5 [internal] load build context\n",
-      "#5 transferring context: 106.86kB done\n",
+      "#5 transferring context: 106.93kB done\n",
       "#5 DONE 0.0s\n",
       "\n",
       "#6 [2/6] COPY requirements.txt ./\n",
@@ -510,9 +511,9 @@
       "\n",
       "#11 exporting to image\n",
       "#11 exporting layers 0.0s done\n",
-      "#11 writing image sha256:6e8d4e0f98db50f2c1c8bd790b8780be52d4ed22f83e7e68c630f8b1fa5e56bb done\n",
+      "#11 writing image sha256:d2ea5488702a0d1edfa32b37afb2c3b1ec0ab499dbfc5bfac744618dcc2f9603 done\n",
       "#11 naming to docker.io/library/wo-dna_vis-ed-direct_sns-get_input:latest done\n",
-      "#11 DONE 0.1s\n",
+      "#11 DONE 0.0s\n",
       "Docker image wo-dna_vis-ed-direct_sns-get_input:latest built successfully.\n",
       "WARNING! Using --password via the CLI is insecure. Use --password-stdin.\n",
       "WARNING! Your password will be stored unencrypted in /home/daniel/.docker/config.json.\n",
@@ -527,9 +528,9 @@
      "text": [
       "Login Succeeded\n",
       "The push refers to repository [485595969306.dkr.ecr.us-east-2.amazonaws.com/wo-dna_vis-ed-direct_sns-get_input]\n",
-      "41ce3a3c96fb: Preparing\n",
-      "3dd2c49b91a3: Preparing\n",
-      "d82f649b3649: Preparing\n",
+      "4c0467183ead: Preparing\n",
+      "1a9aec2c5d90: Preparing\n",
+      "e9e5bc1d2b45: Preparing\n",
       "6fe8485efa46: Preparing\n",
       "34352bc5dfd0: Preparing\n",
       "0a20c8da2344: Preparing\n",
@@ -538,23 +539,23 @@
       "052242efe275: Preparing\n",
       "274a79fec6a9: Preparing\n",
       "6849347e354b: Preparing\n",
+      "05788b7af5ed: Waiting\n",
       "706e59713fa4: Waiting\n",
       "052242efe275: Waiting\n",
       "274a79fec6a9: Waiting\n",
       "6849347e354b: Waiting\n",
       "0a20c8da2344: Waiting\n",
-      "05788b7af5ed: Waiting\n",
-      "34352bc5dfd0: Layer already exists\n",
       "6fe8485efa46: Layer already exists\n",
+      "34352bc5dfd0: Layer already exists\n",
       "0a20c8da2344: Layer already exists\n",
       "05788b7af5ed: Layer already exists\n",
       "706e59713fa4: Layer already exists\n",
       "052242efe275: Layer already exists\n",
-      "274a79fec6a9: Layer already exists\n",
       "6849347e354b: Layer already exists\n",
-      "3dd2c49b91a3: Pushed\n",
-      "d82f649b3649: Pushed\n",
-      "41ce3a3c96fb: Pushed\n"
+      "274a79fec6a9: Layer already exists\n",
+      "e9e5bc1d2b45: Pushed\n",
+      "1a9aec2c5d90: Pushed\n",
+      "4c0467183ead: Pushed\n"
      ]
     },
     {
@@ -568,11 +569,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "latest: digest: sha256:c2693d4c456e7a6fa4458b2a36520ca7e4d8708594a4b74e74ae30f689c46c9b size: 2623\n",
+      "latest: digest: sha256:c7d1c37b7f5f4d5e0cd7074b3a7f9428b76321526b8a3c878be98ebbb9ac9e35 size: 2623\n",
       "Resulting Function ARN: arn:aws:lambda:us-east-2:485595969306:function:wo-dna_vis-ed-direct_sns-get_input\n",
       "Creating sns topic and subscribing lambda function\n",
       "Resulting Topic ARN: arn:aws:sns:us-east-2:485595969306:wo-dna_vis-ed-direct_sns-get_input-sns_topic\n",
-      "Resulting Subscription ARN: arn:aws:sns:us-east-2:485595969306:wo-dna_vis-ed-direct_sns-get_input-sns_topic:2a1ff3e6-5697-492d-a090-cfaafe3fec5e\n",
+      "Resulting Subscription ARN: arn:aws:sns:us-east-2:485595969306:wo-dna_vis-ed-direct_sns-get_input-sns_topic:09cc6e75-6a14-4461-8b3f-ce82c5176c1c\n",
       "Completed deployment of workflow-wo-dna_vis-ed-direct_sns\n",
       "\n",
       "\n"
