tenative state_machine calls

--- a/benchmarks/experiments/wrapper_overhead/run.ipynb
+++ b/benchmarks/experiments/wrapper_overhead/run.ipynb
@@ -109,14 +109,14 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'dna_vis_direct_calls_dir' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m dna_vis_sns_calls_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./dna_visualization/external_database/boto3_only_sns\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;66;03m# Boto3 only sns calls\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m run_utility\u001b[38;5;241m.\u001b[39mrun_experiment(\u001b[43mdna_vis_direct_calls_dir\u001b[49m, payload, times)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'dna_vis_direct_calls_dir' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running boto3_sns workload: workflow-wo-dna_vis-ed-direct_sns\n",
+      "Payload: {'gen_file_name': 'small_sequence.gb'}\n",
+      "Times: 1\n",
+      "Done\n",
+      "\n"
      ]
     }
    ],
