--- a/benchmarks/experiments/wrapper_overhead/run.ipynb
+++ b/benchmarks/experiments/wrapper_overhead/run.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
      "output_type": "stream",
      "text": [
       "Running boto3_direct workload: workflow-wo-dna_vis-ed-direct\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb'}\n",
+      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-step_function', 'experiment_type': 'aws_step_function', 'request_id': 'b7073276-7623-418d-a31a-fd0c9ff7c4d3', 'start_time': '2024-03-21T09:24:57.192325'}}\n",
       "Times: 1\n",
       "Done\n",
       "\n"
@@ -134,12 +134,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running aws_step_function workload: wo-dna_vis-ed-step_function\n",
+      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-step_function', 'experiment_type': 'aws_step_function', 'request_id': '5676ebe2-84c2-495c-a775-dc712937cdbb', 'start_time': '2024-03-21T09:21:31.113142'}}\n",
+      "Times: 1\n"
+     ]
+    }
+   ],
    "source": [
     "dna_vis_aws_step_functions_dir = \"./dna_visualization/external_database/aws_step_function\" # AWS Step Functions\n",
-    "# run_utility.run_experiment(dna_vis_direct_calls_dir, payload, times)"
+    "run_utility.run_experiment(dna_vis_aws_step_functions_dir, payload, times)"
    ]
   },
   {
