resolved issues with incorrect sns configuration

--- a/benchmarks/experiments/wrapper_overhead/run.ipynb
+++ b/benchmarks/experiments/wrapper_overhead/run.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
      "output_type": "stream",
      "text": [
       "Running boto3_sns workload: workflow-wo-dna_vis-ed-direct_sns\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb'}\n",
+      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'workflow-wo-dna_vis-ed-direct_sns', 'experiment_type': 'boto3_sns', 'request_id': 'dd6ee0ca-78f4-4dcc-a587-ad4d9066ae57', 'start_time': '2024-03-21T10:12:38.163520'}}\n",
       "Times: 1\n",
       "Done\n",
       "\n"
@@ -166,7 +166,7 @@
    "outputs": [],
    "source": [
     "dna_vis_direct_calls_dir = \"./dna_visualization/external_database/multi_x\" # Boto3 only direct calls\n",
-    "# run_utility.run_experiment(dna_vis_direct_calls_dir, payload, times)"
+    "run_utility.run_experiment(dna_vis_direct_calls_dir, payload, times)"
    ]
   }
  ],
