--- a/benchmarks/experiments/wrapper_overhead/setup.ipynb
+++ b/benchmarks/experiments/wrapper_overhead/setup.ipynb
@@ -331,16 +331,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Found credentials in environment variables.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -377,7 +370,7 @@
       "#4 DONE 0.0s\n",
       "\n",
       "#5 [internal] load build context\n",
-      "#5 transferring context: 107.82kB done\n",
+      "#5 transferring context: 107.85kB done\n",
       "#5 DONE 0.0s\n",
       "\n",
       "#6 [2/6] COPY requirements.txt ./\n",
@@ -397,7 +390,7 @@
       "\n",
       "#11 exporting to image\n",
       "#11 exporting layers 0.0s done\n",
-      "#11 writing image sha256:aed78f95f8bec56c78068af33626af86af9a0c3113abd967b652221ce3966396 done\n",
+      "#11 writing image sha256:c1092c912c02c2429909b7a8ee44d38bcf6158ccfaf0bc05cb5e4d78f859757a done\n",
       "#11 naming to docker.io/library/wo-dna_vis-ed-direct_sns-visualize:latest done\n",
       "#11 DONE 0.0s\n",
       "Docker image wo-dna_vis-ed-direct_sns-visualize:latest built successfully.\n",
@@ -414,9 +407,9 @@
      "text": [
       "Login Succeeded\n",
       "The push refers to repository [485595969306.dkr.ecr.us-east-2.amazonaws.com/wo-dna_vis-ed-direct_sns-visualize]\n",
-      "582c3565a784: Preparing\n",
-      "e6c498266fbc: Preparing\n",
-      "be34b9c20d9e: Preparing\n",
+      "11492b72a867: Preparing\n",
+      "a08c3402a9ce: Preparing\n",
+      "61535869bf74: Preparing\n",
       "8e1b406f394f: Preparing\n",
       "3a89be36bfcd: Preparing\n",
       "0a20c8da2344: Preparing\n",
@@ -425,23 +418,23 @@
       "052242efe275: Preparing\n",
       "274a79fec6a9: Preparing\n",
       "6849347e354b: Preparing\n",
-      "0a20c8da2344: Waiting\n",
-      "05788b7af5ed: Waiting\n",
       "706e59713fa4: Waiting\n",
       "052242efe275: Waiting\n",
       "274a79fec6a9: Waiting\n",
       "6849347e354b: Waiting\n",
-      "8e1b406f394f: Layer already exists\n",
+      "0a20c8da2344: Waiting\n",
+      "05788b7af5ed: Waiting\n",
       "3a89be36bfcd: Layer already exists\n",
-      "0a20c8da2344: Layer already exists\n",
+      "8e1b406f394f: Layer already exists\n",
       "05788b7af5ed: Layer already exists\n",
-      "706e59713fa4: Layer already exists\n",
+      "0a20c8da2344: Layer already exists\n",
       "052242efe275: Layer already exists\n",
-      "274a79fec6a9: Layer already exists\n",
+      "706e59713fa4: Layer already exists\n",
       "6849347e354b: Layer already exists\n",
-      "be34b9c20d9e: Pushed\n",
-      "e6c498266fbc: Pushed\n",
-      "582c3565a784: Pushed\n"
+      "274a79fec6a9: Layer already exists\n",
+      "61535869bf74: Pushed\n",
+      "a08c3402a9ce: Pushed\n",
+      "11492b72a867: Pushed\n"
      ]
     },
     {
@@ -455,11 +448,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "latest: digest: sha256:c0652b95a2ca57f90d9ba6cfbc9c47107fc85624de2b5f638fcb63bddaa1f26f size: 2623\n",
+      "latest: digest: sha256:e6244270a4a44041322953f8cab8653cbd3b22f096575e67edab8fb2bd6d2bd2 size: 2623\n",
       "Resulting Function ARN: arn:aws:lambda:us-east-2:485595969306:function:wo-dna_vis-ed-direct_sns-visualize\n",
       "Creating sns topic and subscribing lambda function\n",
       "Resulting Topic ARN: arn:aws:sns:us-east-2:485595969306:wo-dna_vis-ed-direct_sns-visualize-sns_topic\n",
-      "Resulting Subscription ARN: arn:aws:sns:us-east-2:485595969306:wo-dna_vis-ed-direct_sns-visualize-sns_topic:eb97e045-f454-434f-b61d-c6eb12935873\n",
+      "Resulting Subscription ARN: arn:aws:sns:us-east-2:485595969306:wo-dna_vis-ed-direct_sns-visualize-sns_topic:fac4dec4-dbe4-47b3-acf1-d28c159aba97\n",
       "\n",
       "Deploying wo-dna_vis-ed-direct_sns-get_input\n",
       "Removing old resources\n",
@@ -483,7 +476,6 @@
       "#2 DONE 0.1s\n",
       "\n",
       "#3 [internal] load .dockerignore\n",
-      "#3 transferring context:\n",
       "#3 transferring context: 2B done\n",
       "#3 DONE 0.0s\n",
       "\n",
@@ -491,7 +483,7 @@
       "#4 DONE 0.0s\n",
       "\n",
       "#5 [internal] load build context\n",
-      "#5 transferring context: 106.93kB done\n",
+      "#5 transferring context: 106.95kB done\n",
       "#5 DONE 0.0s\n",
       "\n",
       "#6 [2/6] COPY requirements.txt ./\n",
@@ -501,17 +493,17 @@
       "#7 CACHED\n",
       "\n",
       "#8 [4/6] COPY app.py ./\n",
-      "#8 DONE 0.0s\n",
+      "#8 CACHED\n",
       "\n",
       "#9 [5/6] COPY src ./src\n",
-      "#9 DONE 0.0s\n",
+      "#9 CACHED\n",
       "\n",
       "#10 [6/6] COPY multi_x_serverless ./multi_x_serverless\n",
-      "#10 DONE 0.0s\n",
+      "#10 CACHED\n",
       "\n",
       "#11 exporting to image\n",
-      "#11 exporting layers 0.0s done\n",
-      "#11 writing image sha256:d2ea5488702a0d1edfa32b37afb2c3b1ec0ab499dbfc5bfac744618dcc2f9603 done\n",
+      "#11 exporting layers done\n",
+      "#11 writing image sha256:a0569ff131a6530f4414223660794e4a76a40932db30ebb215d303996db76d7f done\n",
       "#11 naming to docker.io/library/wo-dna_vis-ed-direct_sns-get_input:latest done\n",
       "#11 DONE 0.0s\n",
       "Docker image wo-dna_vis-ed-direct_sns-get_input:latest built successfully.\n",
@@ -528,9 +520,9 @@
      "text": [
       "Login Succeeded\n",
       "The push refers to repository [485595969306.dkr.ecr.us-east-2.amazonaws.com/wo-dna_vis-ed-direct_sns-get_input]\n",
-      "4c0467183ead: Preparing\n",
-      "1a9aec2c5d90: Preparing\n",
-      "e9e5bc1d2b45: Preparing\n",
+      "5e00b8423586: Preparing\n",
+      "6ee4645909c2: Preparing\n",
+      "78bd355b01ba: Preparing\n",
       "6fe8485efa46: Preparing\n",
       "34352bc5dfd0: Preparing\n",
       "0a20c8da2344: Preparing\n",
@@ -539,23 +531,23 @@
       "052242efe275: Preparing\n",
       "274a79fec6a9: Preparing\n",
       "6849347e354b: Preparing\n",
-      "05788b7af5ed: Waiting\n",
       "706e59713fa4: Waiting\n",
+      "0a20c8da2344: Waiting\n",
       "052242efe275: Waiting\n",
       "274a79fec6a9: Waiting\n",
       "6849347e354b: Waiting\n",
-      "0a20c8da2344: Waiting\n",
-      "6fe8485efa46: Layer already exists\n",
+      "05788b7af5ed: Waiting\n",
+      "5e00b8423586: Layer already exists\n",
+      "6ee4645909c2: Layer already exists\n",
+      "78bd355b01ba: Layer already exists\n",
       "34352bc5dfd0: Layer already exists\n",
+      "6fe8485efa46: Layer already exists\n",
       "0a20c8da2344: Layer already exists\n",
       "05788b7af5ed: Layer already exists\n",
-      "706e59713fa4: Layer already exists\n",
       "052242efe275: Layer already exists\n",
-      "6849347e354b: Layer already exists\n",
       "274a79fec6a9: Layer already exists\n",
-      "e9e5bc1d2b45: Pushed\n",
-      "1a9aec2c5d90: Pushed\n",
-      "4c0467183ead: Pushed\n"
+      "706e59713fa4: Layer already exists\n",
+      "6849347e354b: Layer already exists\n"
      ]
     },
     {
@@ -569,11 +561,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "latest: digest: sha256:c7d1c37b7f5f4d5e0cd7074b3a7f9428b76321526b8a3c878be98ebbb9ac9e35 size: 2623\n",
+      "latest: digest: sha256:314adc2a8f504dce680278a738aadd0f2e925189a945319fbde7dd8b255cfc64 size: 2623\n",
       "Resulting Function ARN: arn:aws:lambda:us-east-2:485595969306:function:wo-dna_vis-ed-direct_sns-get_input\n",
       "Creating sns topic and subscribing lambda function\n",
       "Resulting Topic ARN: arn:aws:sns:us-east-2:485595969306:wo-dna_vis-ed-direct_sns-get_input-sns_topic\n",
-      "Resulting Subscription ARN: arn:aws:sns:us-east-2:485595969306:wo-dna_vis-ed-direct_sns-get_input-sns_topic:09cc6e75-6a14-4461-8b3f-ce82c5176c1c\n",
+      "Resulting Subscription ARN: arn:aws:sns:us-east-2:485595969306:wo-dna_vis-ed-direct_sns-get_input-sns_topic:5f6cb459-4ab9-4dab-9ec9-c5ce703298ef\n",
       "Completed deployment of workflow-wo-dna_vis-ed-direct_sns\n",
       "\n",
       "\n"
@@ -585,7 +577,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
